fix: Disable dark mode support.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -15,17 +15,17 @@
   --navline-width: 0.5rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-color: #ddd;
-    --secondary-fg-color: #aaa;
-    --background-color: #222;
-    --secondary-bg-color: #555;
-    --background-opacity-color: #222222bb;
-    --theme-color: #fe7d49;
-    --theme-color-light: #fe7d4930;
-  }
-}
+// @media (prefers-color-scheme: dark) {
+//   :root {
+//     --foreground-color: #ddd;
+//     --secondary-fg-color: #aaa;
+//     --background-color: #222;
+//     --secondary-bg-color: #555;
+//     --background-opacity-color: #222222bb;
+//     --theme-color: #fe7d49;
+//     --theme-color-light: #fe7d4930;
+//   }
+// }
 
 html {
   font-size: 14px; // Used as 1rem size.
